# TensorLet_in_C_C_PlusPlus

./: CMakeLists.txt  Documentation  HOSVD.cpp  README  README.md  Tensor3D.cpp  Tensor3D.h  cp_als.cpp  cp_gen.cpp  cpd.h  cpd_als.cpp  cpd_gen.cpp  cpgen.cpp  fft.cpp  fft_CMakeLists.txt  fftw.cpp  interface.h  main.cpp  mode_n_product.cpp  pinv.cpp  pinv.h  runningtime.h  svd.cpp  svd_CMakeLists.txt  t_svd.cpp  taco.cpp  ten2mat.cpp  tensor.cpp  tensor.h  tensorSVD.cpp  tensor_hooi.cpp  tensor_train.cpp  tensor_train.h  test.cpp  test_program_case.cpp  tsvd.cpp  tsvd.h  tucker.h  tucker_hosvd.cpp  txt2array.cpp
T-SVD/: CMakeLists.txt
TT/: CMakeLists.txt  main.cpp  ten2mat.cpp  tensor.h  tensor_hooi.cpp  train.h  tucker_hosvd.cpp
TenDeC++_Installation/: armadillo_install.sh  eigen_install.sh  lapack_install.sh
Tensor-Train/: main.cpp  test.sh  train.h
TensorLet_Installation/: armadillo_install.sh  lapack_install.sh
TensorLet_MKL/: CMakeLists.txt
Tensor_Armadillo/: README.md  cp_als.cpp  cpgen.cpp  interface.h  runningtime.h  ten2mat.cpp  tensor.h  tucker_hosvd.cpp
Tensor_Armadillo/Tensor-Train/: main.cpp
Tensor_Armadillo/t-SVD/: main.cpp
Tensor_Dynamic_Array/: CMakeLists.txt  cp_als.cpp  main.cpp
Tensor_Eigen/: CMakeLists.txt  README.md  cp_als.cpp  cp_gen.cpp  main.cpp  runningtime.h  ten2mat.cpp  tensor.h  tensor_hooi.cpp  tsvd.cpp  tt.cpp  tucker_hosvd.cpp
Tensor_MKL/: CMakeLists.txt  READMD.md  README.md  Tensor3D.h  cp_als.cpp  cpgen.cpp  main.cpp  t_svd.cpp
armadillo/: tsvd.cpp
float/: CMakeLists.txt  main.cpp  readme  tensor.cpp  tensor.h
install/: cmake_install.sh  fftw_install.sh
lib/: README.md
mat-Py/: CP.m  CP_direct.m  TUCKER.m  cal_norm.m  read_name.m  run.m
mat-Py/MATLAB/: TUCKER_direct.m  compare.m
mat-Py/python/: cp_tucker.py  loop_test.sh
tensor2.0/: CMakeLists.txt  README  cp_als.cpp  main.cpp  readme  tensor.h  tensor_hooi.cpp  tsvd.cpp  tucker_hosvd.cpp
tensor_armadillo/: README  cp_als.cpp  tucker_hosvd.cpp
tensor_eigen/: CMakeLists.txt  main.cpp  time.cpp
test/: test_fft.cpp  test_mode_n.cpp  test_pinv.cpp  test_program_case.cpp
